# Intelligent_Inbox_Manager

./: .gitignore  README.md  pyproject.toml
.tmp.driveupload/: 445333  445337  445339  445341  445345  445349  445353  445357  445361  445365  445369  445373  445377  445379  445383  445387  445391  445395  445401  445405  445409  445413  445415  445417  445421  445423  445427  445429  445433  445437  445441  445443  445445  445447  445451  445455  445459  445463  445465  445467  (+2 more)
API_Server/: analytics.py  basic_delete.py  basic_get_all_emails.py  basic_send.py  main_server.py  nonbusiness_delete.py  nonbusiness_get_all_emails.py  nonbusiness_send.py  priority_delete.py  priority_direct_send.py  priority_get_all_emails.py  priority_mark_calendar.py  priority_send.py  scheduler_delete.py  scheduler_get_all_emails.py  scheduler_send.py
Backend/: executor.py
Backend/agents/basic_agent/: basic_agent.py  send_email.py
Backend/agents/nonbusiness_agent/: nonbusiness_agent.py
Backend/agents/priority_agent/: priority_agent.py
Backend/agents/scheduler_agent/: read_calendar.py  scheduler_agent.py  (+1 more)
Backend/core/: basic_agent_database.py  basic_emails_examples.py  nonbusiness_agent_database.py  nonbusiness_emails_examples.py  preprocessor.py  priority_agent_database.py  priority_emails_examples.py  receive_email.py  scheduler_agent_database.py  scheduler_emails_examples.py  send_email.py
Frontend/: app.py
Frontend/pages/: appointment.py  basic.py  dashboard.py  home.py  nonbusiness.py  priority.py
databases/: memory.jsonl
databases/vector_db/: chroma.sqlite3
(+19 files in other folders)
